# computer-graphic-lab3-lab4

./: CMakeLists.txt  REAMDE.MD  install_dependencies.sh
src/: main.cpp
